Make sure Equilibrium images don't get too large

--- a/css/equilibrium.css
+++ b/css/equilibrium.css
@@ -12,6 +12,7 @@
 .top a {
     width: 30%;
     margin: 8px;
+    max-width: 500px;
 }
 
 .top img {
